# sparagmos

./: .gitignore  Dockerfile  README.md  bw_bot.py  cyanotype_bot.py  gif_speed_bot.py  halationedge_silver_bot.py  pyproject.toml  ratings.json  requirements.txt  slack_poster.py  stars.json  state.json  stencil_bot.py  stencil_transform.py
docs/: effects.md  recipes.md
recipes/: README.md  acid-wash.yaml  analog-burial.yaml  ancients-bullethole.yaml  ancients-bullseye.yaml  ancients-collage.yaml  ancients-curvylinescreen.yaml  ancients-cyanotype.yaml  ancients-displacement.yaml  ancients-halationedge.yaml  ancients-halftone.yaml  ancients-kaleidoscope.yaml  ancients-lathe.yaml  ancients-linescreen.yaml  ancients-quad.yaml  ancients-reducedlinescreen.yaml  ancients-silver.yaml  ancients-sixshooter.yaml  ancients-stencil.yaml  ancients-wobbleeye.yaml  binary-archaeology.yaml  broadcast-static.yaml  broken-mirror.yaml  bullethole-silver.yaml  bullseye-cyanotype.yaml  bullseye-halftone-fragment.yaml  bullseye-wobble-displacement.yaml  bw-stencil.yaml  byte-liturgy.yaml  cellular-decay.yaml  cga-nightmare.yaml  chimera-engine.yaml  collage-mask-collage.yaml  collage-surgery.yaml  collage-through-glass.yaml  collage-veil.yaml  composite-quilt.yaml  contrast-surgery.yaml  cross-pollinate.yaml  curvy-corruption.yaml  (+148 more)
scripts/: generate_worker_recipes.py
sparagmos/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  slack_post.py  slack_source.py  state.py  vision.py
tests/: conftest.py  test_cli.py  test_config.py  test_filters.py  test_integration.py  test_slack.py  (+5 more)
(+113 files in other folders)
