[project]
name = "sparagmos"
version = "0.1.0"
description = "σπαραγμός — Automated image destruction bot"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "opencv-python-headless>=4.8",
    "slack-sdk>=3.0",
    "requests>=2.28",
    "huggingface-hub>=0.19",
    "torch>=2.0",
    "torchvision>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_imagemagick: requires ImageMagick installed",
    "requires_netpbm: requires NetPBM installed",
    "requires_ffmpeg: requires ffmpeg installed",
    "requires_potrace: requires potrace installed",
    "requires_primitive: requires primitive installed",
    "requires_torch: requires PyTorch (neural effects)",
]
